# Iris

./: .editorconfig  AGENTS.md  CLAUDE.md  README.md  RECENT_MESSAGES_PAGINATION.md  build.md  iris_control  iris_control.ps1  iris_control_termux  rereview.md  review.md  review.txt  todolist.md
.github/workflows/: closeout-replay.yml
.serena/: project.yml
app/: build.gradle.kts  proguard-rules.pro
artifacts/metadata/: consistency-check.json  packet-facts.json  revision.txt
artifacts/patches/: working-tree.patch
config/detekt/: baseline.xml  detekt.yml
docs/: H2C_MIGRATION_STATUS.md  agent-reference.md  auth-contract.md  client-webhook-type-attachment.md  evidence-index.md  executive-closeout.md  markdown-rendering-notes.md  review-outbox-state-transition.md
docs/closeout-test-20260402/: README.md
docs/closeout-test-20260402/docs/: evidence-index.md  executive-closeout.md
docs/iris-codebase-closeout-20260402/: README.md
docs/iris-codebase-closeout-20260402/docs/: evidence-index.md
docs/review/: 2026-03-30-external-reviewer-status-1-10.md  2026-03-30-review-items-1-7-response.md  2026-03-31-final-closure.md  2026-03-31-reviewer-bundle-index.md  2026-03-31-reviewer-bundle-manifest.md  2026-03-31-reviewer-change-rationale.md  2026-03-31-reviewer-guide.md  2026-03-31-test-results.md
docs/reviews/: 2026-03-26-prompt-hierarchy-before-after.md  2026-03-26-prompt-hierarchy-external-review-brief.md
docs/runbooks/: 2026-03-30-nano-banana-file-input-validation.md
docs/superpowers/plans/: 2026-03-14-iris-h2c-unification.md  2026-03-20-webhook-type-attachment.md  2026-03-21-iris-refactoring.md  2026-03-25-frida-quality-gates.md  2026-03-25-reply-queue-parallelization.md  2026-03-25-session-chain-graft-production.md  2026-03-25-session-chain-graft.md  2026-03-25-threaded-image-readiness-hardening.md  2026-03-26-embed-agent-bundle.md  2026-03-26-go-daemon-optimization.md  2026-03-26-lsposed-image-bridge.md  2026-03-27-bridge-quality-refactor.md  2026-03-27-iris-ctl-tui.md  2026-03-27-member-management.md  2026-03-28-compatibility-unification.md  2026-03-28-post-refactor-optimizations.md  2026-03-29-iris-ctl-reply-modal.md
docs/superpowers/reviews/: 2026-03-29-core-refactoring-review.md
docs/superpowers/specs/: 2026-03-20-webhook-type-attachment-design.md  (+11 more)
frida-modern/agent/: thread-image-graft.ts
frida/agent/: eslint.config.mjs  package-lock.json  package.json  thread-image-discovery.ts  thread-image-graft.ts  thread-markdown-graft.ts  tsconfig.json
frida/daemon/: .gitattributes  .golangci.yml  Makefile  go.mod  go.sum  graft-daemon
frida/legacy/: graft-daemon.py  thread-image-graft.js  thread-markdown-graft.js
iris_improvement_docs_20260422/: 00_full_detailed_fix_guide.docx  00_full_detailed_fix_guide.md  MANIFEST.md  README.md
iris_improvement_docs_20260422/01_step_by_step_fix_plan/: STEP_01_closeout_bundle_integrity.md  STEP_02_bridge_optional_readiness_contract.md  STEP_03_config_api_atomicity.md  STEP_04_config_load_validation.md  STEP_05_shell_quoting_and_injection_defense.md  STEP_06_sse_reconnect_loss_race.md  STEP_07_sse_frame_multiline_stability.md  STEP_08_sse_event_bus_actor_exception_safety.md  STEP_09_webhook_outbox_dispatcher_lifecycle_concurrency.md  STEP_10_webhook_outbox_claim_stability.md  STEP_11_sqlite_statement_close.md  STEP_12_shutdown_order_and_checkpoint_flush.md  STEP_13_reply_admission_actor_state_boundary.md  STEP_14_multipart_input_hardening.md  STEP_15_body_size_overflow_defense.md  STEP_16_auth_nonce_replay_dos_boundary.md  STEP_17_webhook_endpoint_default_route_policy.md  STEP_18_rust_kotlin_canonical_query_contract.md  STEP_19_apk_checksum_sha256.md  STEP_20_readiness_error_minimization.md  STEP_21_config_state_store_lock_simplification.md  STEP_22_sqlite_sse_event_store_prune_validation.md
iris_improvement_docs_20260422/02_documentation_updates/: README_and_operations_updates.md
iris_improvement_docs_20260422/03_pr_and_release_plan/: PR_split_plan.md  final_release_checklist.md
iris_improvement_docs_20260422/04_test_checklists/: test_checklist.md
iris_improvement_docs_20260422/05_code_snippets/: core_code_snippets.md
kakao-thread-fix/: build.gradle.kts
native/: Cargo.toml
native/iris-native-core/: Cargo.toml
native/iris-native-core/src/: decrypt.rs  errors.rs  ffi.rs  ingress.rs  lib.rs  parsers.rs  query_projection.rs  routing.rs  statistics.rs  webhook.rs
scripts/: check-bridge-boundaries.sh  check-native-core-boundaries.sh  closeout_facts.py  export-closeout-packet.sh  generate_bundle_manifest.py  replay_closeout.sh  verify-all.sh  verify-iris-skill-sync.sh  verify_closeout_packet.py  zygisk_next_bootstrap.sh  zygisk_next_watchdog.sh
tests/: closeout_packet_scripts_test.sh  iris_control_device_selection_test.sh  iris_control_env_loading_test.sh  iris_control_install_checksum_test.sh  iris_control_native_install_test.sh  iris_control_shell_quote_test.sh  iris_control_stop_race_test.sh  zygisk_next_bootstrap_bridge_ready_test.sh  zygisk_next_bootstrap_test.sh  zygisk_next_watchdog_test.sh
tools/: Cargo.toml  README.md  clippy.toml  deny.toml
tools/iris-common/: Cargo.toml  README.md
tools/iris-common/src/: api.rs  auth.rs  config.rs  lib.rs  models.rs
tools/iris-common/tests/: auth_contract_test.rs  recent_messages_models_test.rs
tools/iris-ctl/: Cargo.toml  README.md
tools/iris-ctl/src/: api.rs  app.rs  auth.rs  config.rs  event_loop.rs  main.rs  models.rs  query_mapping.rs  refresh.rs  reply_encode.rs  room_context.rs  sse.rs
tools/iris-ctl/src/views/: events.rs  members.rs  members_projection.rs  members_render.rs  messages.rs  messages_formatter.rs  messages_projection.rs  mod.rs  path_input.rs  reply_modal.rs  rooms.rs  stats.rs
tools/iris-ctl/src/views/reply_modal/: input.rs  render.rs  state.rs  util.rs  validate.rs
tools/iris-daemon/: Cargo.toml  README.md
tools/iris-daemon/deploy/: iris-daemon.service
tools/iris-daemon/src/: adb.rs  alert.rs  config.rs  config_sync.rs  daemon.rs  health.rs  init.rs  launch_spec.rs  main.rs  process.rs  rollback.rs  state.rs
(+445 files in other folders)
