[workspace]
members = ["iris-native-core"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.95.0"

[workspace.dependencies]
base64 = "0.22"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
hex = "0.4"
jni = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2"

[workspace.lints.rust]
unsafe_code = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"
elided_lifetimes_in_paths = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
