[workspace]
members = ["iris-common", "iris-ctl"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85.0"

[workspace.dependencies]
tokio = { version = "1.50", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
dirs = "6"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-journald = "0.3"
sd-notify = "0.5"
