[package]
name = "iris-native-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
jni = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
