[package]
name = "iris-common"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
base64 = "0.22"

[lints]
workspace = true
