[package]
name = "iris-ctl"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
dirs = "6"
anyhow = "1"
futures-util = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2.1"
