[package]
name = "iris-ctl"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
iris-common = { path = "../iris-common" }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
futures-util = "0.3"
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
urlencoding = "2.1"

[lints]
workspace = true
