[package]
name = "iris-daemon"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
iris-common = { path = "../iris-common" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-journald = { workspace = true }
sd-notify = { workspace = true }
anyhow = { workspace = true }
